syntax = "proto3";

option go_package = "github.com/KyloRilo/load-balancer/proto";
package proto;

service LoadBalancer {
    rpc AddConnection (ConnRequest) returns (ConnResp) {}
}

message ConnRequest {
    string url = 1;
}

message ConnResp {
    int32 code = 1;
}